--- a/style.css
+++ b/style.css
@@ -158,3 +158,32 @@ footer {
     color: #fff;
     margin-top: 20px;
 }
+
+
+@media (max-width: 480px) {
+    header nav ul {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .logo {
+        font-size: 1.5em;
+    }
+
+    .services .service-item, .team-gallery img, .grid-container img {
+        width: 100%;
+        height: auto;
+    }
+
+    .contact-form label, .contact-form input, .contact-form select, .contact-form button {
+        font-size: 14px;
+    }
+
+    .service-item, .about-team, .intro, .contact-form, .mosaic {
+        margin: 5px;
+    }
+
+    .grid-container, .team-gallery {
+        flex-direction: column;
+    }
+}
